# Pyris

./: .gitignore  README.md  pyproject.toml  pyris.md
.github/workflows/: ci.yml
examples/: _shared.py  analyze_video.py  async_batch.py  custom_provider.py  transcribe_audio.py
pyris/: __init__.py  config.py  errors.py  ffmpeg.py  llm.py  pipeline.py  provider.py  sampling.py  types.py
pyris/prompts/: __init__.py  default.md
pyris/providers/: __init__.py  file.py
tests/: conftest.py  test_ffmpeg_integration.py  test_ffmpeg_parse.py  test_llm.py  test_pipeline.py  test_routing_timeline.py  test_sampling.py  test_types_config.py
