[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyris"
version = "0.1.0"
description = "A Python vision + speech-to-text library powered by vision LLMs and Whisper."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
# Zero runtime Python dependencies — only ffmpeg/ffprobe are needed on PATH.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["pyris*"]

[tool.setuptools.package-data]
"pyris.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
